  Bugfixes:
    - Fixed 'Shift + E' opening the vehicle GUI instead of closing the current GUI for some GUIs
    - Fixed 'Shift + E' not closing the current GUI when not in a vehicle
    - Fixed crash in multiplayer when a passenger exits a spidertron that has no driver
---------------------------------------------------------------------------------------------------
Version: 1.4.11
Date: 20 April 2021
  Bugfixes:
    - Fixed crash when spidertron with no equipment grid dies
    - Fixed 'Travelling Spidertron' causing item loss if another mod increases spidertron inventory size
---------------------------------------------------------------------------------------------------
Version: 1.4.10
Date: 14 April 2021
  Features:
    - 'Call last used spidertron' now sets the same follow offset every time it is used
    - 'Spidertron remote pipette' plays success and failure sounds
  Changes:
    - 'Shift + E' now closes the current GUI instead of immediately opening the vehicle GUI (it now behaves more like 'E')
---------------------------------------------------------------------------------------------------
Version: 1.4.9
Date: 13 April 2021
  Bugfixes:
    - Fixed crash when quick-toggling a spidertron in editor mode
---------------------------------------------------------------------------------------------------
Version: 1.4.8
Date: 7 April 2021
  Bugfixes:
    - Fixed spidertron remotes becoming disconnected when that spidertron mounts another vehicle
---------------------------------------------------------------------------------------------------
Version: 1.4.7
Date: 7 April 2021
  Changes:
    - Players now keep their walking state when quick-toggling into a spidertron (so they don't have to re-press WASD)
  Bugfixes:
    - Fixed being able to quick toggle a spidertron whilst another spidertron is riding on top of it (leaving behind a floating head)
    - Fixed z-fighting graphical artifacts appearing when a spidertron dismounts another spidertron